Salabots vienkāršais darbu lasīšanas algoritms